# mvp-asistente-ia

./: .env.example  .gitignore  ANALISIS_REQUERIMIENTOS.md  ARQUITECTURA_VISUAL.md  AUTH_FLOW.md  COMMIT_INSTRUCTIONS.md  INDEX.md  PLAN_VALIDACION_METRICAS.md  README.md  REINGESTA.md  SECURITY_RS4.md  SECURITY_RS5.md  check_docs.py  pyproject.toml  register_existing_docs.py  reingest.py  reset_knowledge.py  run_admin_dashboard.py  run_analytics_dashboard.py  run_chat.py  test_api.py  test_server.py
config/: settings.py
data/analytics/: analytics.db
data/raw/: .gitkeep  ejemplo_documento.txt
data/sessions/: sessions.db
deployment/: Dockerfile  Dockerfile.streamlit  docker-compose.yml  nginx.conf
scripts/: cleanup_old_data.py  generate_encryption_key.py
src/admin/: __init__.py  document_manager.py  feedback_manager.py
src/analytics/: __init__.py  metrics.py  tracker.py
src/auth/: __init__.py  authentication.py  middleware.py  models.py  repository.py
src/evaluation/: __init__.py  offline.py
src/knowledge_base/: __init__.py  ingest.py  text_cleaning.py
src/memory/: __init__.py  conversation.py
src/predictive/: __init__.py  anomaly_detector.py  pattern_analyzer.py  recommender.py
src/rag_engine/: __init__.py  pipeline.py  vector_store.py
src/security/: __init__.py  chromadb_cipher.py  data_retention.py  encryption.py  pii_masker.py  sqlite_cipher.py  ssl_certs.py
src/service/: admin_routes.py  app.py  auth_routes.py  gdpr_routes.py  schemas.py  user_routes.py
src/ui/: admin_dashboard.py  analytics_dashboard.py  app.py  auth.py  chat_app.py
src/utils/: __init__.py  logger.py
